src/main/resources/static/css/cart.css
.cart-container {
    width: 65vw;
    margin: 0 auto;
    position: relative;
}

.cart-item {
    display: flex;
    justify-content:space-between;
    width: 100%;
    padding: 1rem;
    border-bottom: 1px solid rgba(33, 163, 33, 0.616);
}

.cart-item-image {
    width: 20%;
}

.cart-item-image img {
    width: 150px;
    height: auto;
}

.cart-item-name {
    width: 40%;
    display: flex;
}

.cart-item-name p {
    font-size: 1.5rem;
    margin: 0;
}

.cart-item-buttons {
    width: 30%;
    display: flex;
    align-items:flex-start;
}

.cart-item-buttons * {
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    margin-right: 0.3rem;
}

.cart-item-buttons input {
    width: 100px;
}

.cart-item-price-qty {
    width: 20%;
    text-align: right;
    /* display: flex;
    flex-direction: column;
    align-items: center; */
}

.cart-item-price-qty * {
    margin-top: 0;
    margin-bottom: 1rem;
}

.cart-button-container {
    padding-top: 1.5rem;
    position: absolute;
    right: 0;
}

.cart-button {
    position: absolute;
    /* right: 0; */
    border-radius: 0;
    padding: 1rem 2rem;
    background-color: rgba(255, 145, 0, 0.904);
    box-shadow: none;
    color: white;
    font-weight:600;
    transition: background-color 0.2s ease-in-out;
}

.cart-button:hover {
    background-color: rgba(33, 163, 33, 0.616);
    /* padding: 1.1rem; */
}

.cart-checkout-container {
    text-align: right;
    margin-top: 2rem;
}

#subtotal {
    font-size: 1.5rem;
}

